Great refactoring overhaul

--- a/Code/3d_unet_training.ipynb
+++ b/Code/3d_unet_training.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "276bae4e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Simple Segmentation Net"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 101,
    "id": "d88614b3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -56,7 +64,11 @@
   {
    "cell_type": "markdown",
    "id": "aa390054",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Data Loading"
    ]
@@ -65,7 +77,11 @@
    "cell_type": "code",
    "execution_count": 106,
    "id": "5dcd294b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "Scans = {\n",
@@ -82,44 +98,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 104,
-   "id": "6f7a3cdd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/media/z/Ubuntu-Storage/BT_Segmentation_Project/Task01_BrainTumour/cropped/imagesTr\n",
-      "/media/z/Ubuntu-Storage/BT_Segmentation_Project/Task01_BrainTumour/cropped/labelsTr\n",
-      "torch.Size([1, 4, 155, 192, 192])\n",
-      "torch.Size([1, 155, 192, 192])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# PATH\n",
-    "dataset_path = '/media/z/Ubuntu-Storage/BT_Segmentation_Project/Task01_BrainTumour/cropped/'\n",
-    "\n",
-    "train_data = BraTS_TrainingDataset(dataset_path)\n",
-    "\n",
-    "trainloader = torch.utils.data.DataLoader(\n",
-    "    train_data, batch_size=1, shuffle=True, num_workers=0)\n",
-    "\n",
-    "train_iter = iter(trainloader)\n",
-    "\n",
-    "sample_batch = train_iter.next()\n",
-    "print(sample_batch['image'].shape)\n",
-    "print(sample_batch['label'].shape)\n",
-    "\n",
-    "# plot_batch(sample_batch, num_rows=2, height=75)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6794d3e7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Create the model"
    ]
@@ -128,7 +113,11 @@
    "cell_type": "code",
    "execution_count": 107,
    "id": "b3b87e8f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -147,183 +136,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "17561405",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class SmallBTSegNet(nn.Module):\n",
-    "        \n",
-    "    def downward_block(self, in_channels, out_channels, kernel_size=3, stride=1, padding=1):\n",
-    "        \"\"\"\n",
-    "        The downward blocks are part of the contracting path.\n",
-    "        Utility:\n",
-    "        - decrease the depth, height and width.\n",
-    "        - increase the number of channels.\n",
-    "        The result is that features get more high level\n",
-    "        and spatial information decreases with each downward block.\n",
-    "        \"\"\"\n",
-    "        downward_block = nn.Sequential(\n",
-    "            nn.Conv3d(in_channels=in_channels, out_channels=out_channels,\n",
-    "                      kernel_size=kernel_size, stride=stride, padding=padding),\n",
-    "            nn.ReLU(),\n",
-    "            nn.BatchNorm3d(out_channels),\n",
-    "                \n",
-    "            nn.Conv3d(in_channels=out_channels, out_channels=out_channels,\n",
-    "                      kernel_size=kernel_size, stride=stride, padding=padding),\n",
-    "            nn.ReLU(),\n",
-    "            nn.BatchNorm3d(out_channels),\n",
-    "            )\n",
-    "        return downward_block\n",
-    "    \n",
-    "    def upward_block(self, in_channels, out_channels, kernel_size=3, stride=1, padding=1):\n",
-    "        \"\"\"\n",
-    "        The upward blocks are part of the expanding path.\n",
-    "        Utility:\n",
-    "        - increase the number of depth, height and width.\n",
-    "        - decrease the number of channels.\n",
-    "        The result is a segmentation map that increases\n",
-    "        in resolution for each upward block.\n",
-    "        \"\"\"\n",
-    "        mid_channels = in_channels//2\n",
-    "        # E.g.: in_c = 512, mid_c = 256, out_c = 128\n",
-    "        \n",
-    "        upward_block = nn.Sequential(\n",
-    "            nn.Conv3d(in_channels=in_channels, out_channels=mid_channels,\n",
-    "                      kernel_size=kernel_size, stride=stride, padding=padding),\n",
-    "            nn.ReLU(),\n",
-    "            nn.BatchNorm3d(mid_channels),\n",
-    "                \n",
-    "            nn.Conv3d(in_channels=mid_channels, out_channels=out_channels,\n",
-    "                      kernel_size=kernel_size, stride=stride, padding=padding),\n",
-    "            nn.ReLU(),\n",
-    "            nn.BatchNorm3d(out_channels))\n",
-    "        \n",
-    "        return upward_block\n",
-    "    \n",
-    "    def __init__(self, num_modalities, num_classes, img_height, img_width):\n",
-    "        \n",
-    "        self.DEBUG = False\n",
-    "        \n",
-    "        super(SmallBTSegNet, self).__init__()\n",
-    "        self.maxpool = nn.MaxPool3d(kernel_size=2, stride=2)\n",
-    "        \n",
-    "        # downward layers\n",
-    "        self.down1 = self.downward_block(in_channels=num_modalities, out_channels=8, \n",
-    "                                      kernel_size=3, stride=1, padding=1)\n",
-    "    \n",
-    "        self.down2 = self.downward_block(in_channels=8, out_channels=8, \n",
-    "                                      kernel_size=3, stride=1, padding=1)\n",
-    "        \n",
-    "        self.down3 = self.downward_block(in_channels=8, out_channels=16, \n",
-    "                                      kernel_size=3, stride=1, padding=1)\n",
-    "        \n",
-    "        self.same_conv = nn.Sequential(\n",
-    "            nn.Conv3d(in_channels=16, out_channels=16,\n",
-    "                      kernel_size=3, stride=1, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.BatchNorm3d(16),\n",
-    "        )\n",
-    "        \n",
-    "        self.upconv1 = nn.ConvTranspose3d(in_channels=16, out_channels=16,\n",
-    "                              kernel_size=3, stride=2, padding=1, output_padding=1)\n",
-    "        \n",
-    "        self.up1 = self.upward_block(in_channels=32, out_channels=16, \n",
-    "                                     kernel_size=3, stride=1, padding=0)\n",
-    "        \n",
-    "        self.upconv2 = nn.ConvTranspose3d(in_channels=16, out_channels=8,\n",
-    "                              kernel_size=10, stride=2, padding=0, output_padding=0)\n",
-    "        \n",
-    "        self.up2 = self.upward_block(in_channels=16, out_channels=8, \n",
-    "                                     kernel_size=3, stride=1, padding=0)\n",
-    "        \n",
-    "        self.upconv3 = nn.ConvTranspose3d(in_channels=8, out_channels=4,\n",
-    "                              kernel_size=9, stride=2, padding=0, output_padding=1)\n",
-    "        \n",
-    "        self.up3 = self.upward_block(in_channels=12, out_channels=4, \n",
-    "                                     kernel_size=3, stride=1, padding=1)\n",
-    "        \n",
-    "        self.out_conv = nn.Sequential(\n",
-    "            nn.Conv3d(in_channels=4, out_channels=4,\n",
-    "                      kernel_size=3, stride=1, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "        )\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = torch.FloatTensor(x).to(device)\n",
-    "        \n",
-    "        # downward layers\n",
-    "        x = self.down1(x)\n",
-    "        l1_out = torch.clone(x)\n",
-    "        x = self.maxpool(x)\n",
-    "        \n",
-    "        x = self.down2(x)\n",
-    "        l2_out = torch.clone(x)\n",
-    "        x = self.maxpool(x)\n",
-    "        \n",
-    "        x = self.down3(x)\n",
-    "        l3_out = torch.clone(x)\n",
-    "        x = self.maxpool(x)\n",
-    "        \n",
-    "        # bottom floor\n",
-    "        x = self.same_conv(x)\n",
-    "        x = self.same_conv(x)\n",
-    "        \n",
-    "        if self.DEBUG:\n",
-    "            print('l1_out:', l1_out.shape)\n",
-    "            print('l2_out:', l2_out.shape)\n",
-    "            print('l3_out:', l3_out.shape)\n",
-    "            print('x:', x.shape)\n",
-    "        \n",
-    "        # upward layers\n",
-    "        x = self.upconv1(x)\n",
-    "        if self.DEBUG:\n",
-    "            print('after upconv1:', x.shape)\n",
-    "        x = torch.cat((l3_out, x), dim=1)\n",
-    "        if self.DEBUG:\n",
-    "            print('after cat:', x.shape)\n",
-    "        x = self.up1(x)\n",
-    "        if self.DEBUG:\n",
-    "            print('after up1:', x.shape)\n",
-    "        \n",
-    "        x = self.upconv2(x)\n",
-    "        if self.DEBUG:\n",
-    "            print('after upconv2:', x.shape)\n",
-    "        x = torch.cat((l2_out, x), dim=1)\n",
-    "        if self.DEBUG:\n",
-    "            print('after cat:', x.shape)\n",
-    "        x = self.up2(x)\n",
-    "        if self.DEBUG:\n",
-    "            print('after up2:', x.shape)\n",
-    "        \n",
-    "        x = self.upconv3(x)\n",
-    "        if self.DEBUG:\n",
-    "            print('after upconv3:', x.shape)\n",
-    "        x = torch.cat((l1_out, x), dim=1)\n",
-    "        if self.DEBUG:\n",
-    "            print('after cat:', x.shape)\n",
-    "        x = self.up3(x)\n",
-    "        if self.DEBUG:\n",
-    "            print('after up3:', x.shape)\n",
-    "        \n",
-    "        # output conv block\n",
-    "        x = self.out_conv(x)\n",
-    "        if self.DEBUG:\n",
-    "            print('after out conv:', x.shape)       \n",
-    "        return x\n",
-    "    \n",
-    "# summary\n",
-    "# print(SmallBTSegNet(num_modalities=4, num_classes=4, img_height=96, img_width=96))\n",
-    "\n",
-    "# init model\n",
-    "model = SmallBTSegNet(num_modalities=4, num_classes=4, img_height=96, img_width=96).to(device)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "c29e8e8d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Test & debug model"
    ]
@@ -332,18 +151,26 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "033a922f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Sample a minicube batch\n",
-    "minicube_batch = split_cube(train_iter.next())"
+    "minicube_batch = split_cube(train_iter.next()) # 8 minicubes per image"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "id": "91b630e3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "voxel_logits_batch = model.forward(minicube_batch['image'][:1,:,:,:,:])"
@@ -352,7 +179,11 @@
   {
    "cell_type": "markdown",
    "id": "4762bd25",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Training loop utils"
    ]
@@ -361,7 +192,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "24e5117a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "criterion = nn.CrossEntropyLoss()"
@@ -371,7 +206,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "ea86aaae",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_minicube_batch_loss(minicube_batch, step, device):\n",
@@ -399,7 +238,11 @@
   {
    "cell_type": "markdown",
    "id": "ca806af8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Training Loop"
    ]
@@ -409,7 +252,10 @@
    "execution_count": 11,
    "id": "5735f80e",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -512,7 +358,7 @@
     "for epoch in range(epochs):\n",
     "    for step in range(steps_per_epoch):\n",
     "        \n",
-    "        if step%8 == 0:\n",
+    "        if step%4 == 0:\n",
     "            # Get a new minicube batch\n",
     "            minicube_batch = split_cube(train_iter.next())\n",
     "        \n",
@@ -534,7 +380,11 @@
    "cell_type": "code",
    "execution_count": 80,
    "id": "7cebb103",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -568,7 +418,11 @@
    "cell_type": "code",
    "execution_count": 81,
    "id": "bff26c89",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -648,13 +502,17 @@
     "weights_filename = 'weights_epoch3_step300_loss0.026.h5'\n",
     "inference_model = SmallBTSegNet(num_modalities=4, num_classes=4, img_height=96, img_width=96).to(device)\n",
     "inference_model.load_state_dict(torch.load('../Weights/' + weights_filename))\n",
-    "inference_model.eval()"
+    "_ = inference_model.eval()"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "4169b86a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Predict"
    ]
@@ -663,7 +521,11 @@
    "cell_type": "code",
    "execution_count": 109,
    "id": "1a89bf9b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -693,7 +555,11 @@
    "cell_type": "code",
    "execution_count": 99,
    "id": "16d64fb1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -734,7 +600,11 @@
    "cell_type": "code",
    "execution_count": 100,
    "id": "7bac150f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
