--- a/Code/Optional/Minicubes_Usage_Example.ipynb
+++ b/Code/Optional/Minicubes_Usage_Example.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "4d6d9dad",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Minicubes Utility notebook"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "a501ab89",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -56,7 +64,11 @@
   {
    "cell_type": "markdown",
    "id": "6573cab4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Data Loading"
    ]
@@ -65,7 +77,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "be2d7f6f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -99,7 +115,11 @@
   {
    "cell_type": "markdown",
    "id": "2c0b2628",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Cube splitting"
    ]
@@ -108,7 +128,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "13a91297",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Get a minicube batch\n",
@@ -120,7 +144,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "e771e6ee",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -155,7 +183,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "343ccf20",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
