--- a/Code/First_Model_UNet.ipynb
+++ b/Code/First_Model_UNet.ipynb
@@ -266,45 +266,27 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "2f1591cd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "# taken from https://www.kaggle.com/code/bigironsphere/loss-function-library-keras-pytorch/notebook\n",
-    "def dice_loss_one_image(inputs, targets, smooth=1):\n",
-    "    inputs = torch.sigmoid(inputs)       \n",
-    "        \n",
-    "    #flatten label and prediction tensors\n",
-    "    inputs = inputs.view(-1)\n",
-    "    targets = targets.view(-1)\n",
-    "    \n",
-    "    intersection = (inputs * targets).sum()                            \n",
-    "    dice = (2.*intersection + smooth)/(inputs.sum() + targets.sum() + smooth)  \n",
-    "        \n",
-    "    return 1 - dice"
+    "# taken from https://www.kaggle.com/code/bigironsphere/loss-function-library-keras-pytorch/notebook\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "id": "4bd5aa85",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
-   "source": [
-    "class DiceLoss(nn.Module):\n",
-    "    def __init__(self, weight=None, size_average=True):\n",
-    "        super(DiceLoss, self).__init__()\n",
-    "\n",
-    "    def forward(self, inputs, targets):\n",
-    "        \n",
-    "        loss_count = 0\n",
-    "        for i in range(len(inputs[0])):\n",
-    "            current_class = targets.clone()\n",
-    "            current_class[current_class!=i] = 0\n",
-    "            current_class[current_class==i] = 1\n",
-    "            loss_count += dice_loss_one_image(inputs[:, i], current_class)\n",
-    "        \n",
-    "        return loss_count/4"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -397,7 +379,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "92c5fc13",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -421,7 +407,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "e9fd3512",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "unet_loaded = UNet(in_channels=4, out_channels=4, init_features=32)\n",
@@ -432,7 +422,11 @@
   {
    "cell_type": "markdown",
    "id": "42f2de7e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Evaluation"
    ]
@@ -440,7 +434,11 @@
   {
    "cell_type": "markdown",
    "id": "42f40a69",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "mean of the % of the intercept of all classes:"
    ]
@@ -449,7 +447,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "60d4fee4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class Dice_Metric(nn.Module):\n",
@@ -472,17 +474,21 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "ac0d9990",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mset_grad_enabled(\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m     11\u001b[0m     y_pred \u001b[38;5;241m=\u001b[39m unet_loaded(x)\n\u001b[1;32m---> 12\u001b[0m     y_true \u001b[38;5;241m=\u001b[39m \u001b[43my_true\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtype\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mLongTensor\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m     13\u001b[0m     loss \u001b[38;5;241m=\u001b[39m dice_loss(y_pred, y_true)\n\u001b[0;32m     14\u001b[0m     loss_test\u001b[38;5;241m.\u001b[39mappend(loss)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [17]\u001B[0m, in \u001B[0;36m<cell line: 5>\u001B[1;34m()\u001B[0m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m torch\u001B[38;5;241m.\u001B[39mset_grad_enabled(\u001B[38;5;28;01mFalse\u001B[39;00m):\n\u001B[0;32m     11\u001B[0m     y_pred \u001B[38;5;241m=\u001B[39m unet_loaded(x)\n\u001B[1;32m---> 12\u001B[0m     y_true \u001B[38;5;241m=\u001B[39m \u001B[43my_true\u001B[49m\u001B[43m[\u001B[49m\u001B[43m:\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m:\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m:\u001B[49m\u001B[43m]\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtype\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtorch\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mLongTensor\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mto(device)\n\u001B[0;32m     13\u001B[0m     loss \u001B[38;5;241m=\u001B[39m dice_loss(y_pred, y_true)\n\u001B[0;32m     14\u001B[0m     loss_test\u001B[38;5;241m.\u001B[39mappend(loss)\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
@@ -614,7 +620,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "39a8cb84",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
