--- a/Code/Optional/result_visualization.ipynb
+++ b/Code/Optional/result_visualization.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "cd7ee585",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -29,7 +33,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "e109cb6f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -54,7 +62,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "0ab8d9cf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "trainloader = torch.utils.data.DataLoader(\n",
@@ -71,7 +83,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "ca82aa79",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -93,7 +109,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "0b8a1189",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "device = 'cuda:0'\n",
@@ -106,7 +126,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "53b19c52",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -132,7 +156,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "066e125f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "prediction[:,0,1,:,:] = prediction[:,0,1,:,:]*2\n",
@@ -143,7 +171,11 @@
   {
    "cell_type": "markdown",
    "id": "fc137389",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 2D Animation"
    ]
@@ -152,7 +184,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "688e4ee0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def animate(i):\n",
@@ -171,7 +207,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "8587fa2e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1161,7 +1201,11 @@
   {
    "cell_type": "markdown",
    "id": "162cb82f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# 3D Visualization"
    ]
@@ -1170,7 +1214,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "2482e349",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "cube_label = sample_batch['label'][0, 0].float()\n",
@@ -1183,7 +1231,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "496acc36",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# taken from https://terbium.io/2017/12/matplotlib-3d/\n",
@@ -1199,7 +1251,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "2f35ce3c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def plot_cube(cube, angle=20):        \n",
@@ -1223,7 +1279,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "f0ae3446",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2211,7 +2271,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7f75c512",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "plot_cube(resized_prediction)"
@@ -2221,7 +2285,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "02138e45",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "plot_cube(resized_brain)"
