--- a/Code/demo.ipynb
+++ b/Code/demo.ipynb
@@ -31,7 +31,7 @@
     "import os\n",
     "os.environ[\"KMP_DUPLICATE_LIB_OK\"]=\"TRUE\"\n",
     "from data_loading import BraTS_Dataset\n",
-    "from dataset_utils import split_cube, slice_cube, segment_entire_3d_cube\n",
+    "from dataset_utils import split_cube, split_cube_with_context, slice_cube, segment_entire_3d_cube\n",
     "from dataset_utils import plot_batch, plot_minicube_pred_label, plot_cube_pred_label, plot_loss\n",
     "from data_loading import get_train_test_iters\n",
     "torch.manual_seed(42)\n",
@@ -181,7 +181,7 @@
     "\n",
     "# init model\n",
     "if train_3d:\n",
-    "    model = UNet3D(num_modalities=4, num_classes=4, img_height=96, img_width=96).to(device)\n",
+    "    model = UNet3D(num_modalities=4, num_classes=4).to(device)\n",
     "else:\n",
     "    model = UNet2D().to(device)\n",
     "\n",
