Added result animation for 2D and 3D models

--- a/Code/Optional/Minicubes_Usage_Example.ipynb
+++ b/Code/Optional/Minicubes_Usage_Example.ipynb
@@ -23,14 +23,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x7fd9f80fbad0>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Dataset_Utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 22>\u001B[1;34m()\u001B[0m\n\u001B[0;32m     18\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m     20\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mSimpleITK\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01msitk\u001B[39;00m\n\u001B[1;32m---> 22\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mDataset_Utils\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m BraTS_TrainingDataset\n\u001B[0;32m     23\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mDataset_Utils\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m plot_batch, crop_batch, decrop_batch, split_cube\n\u001B[0;32m     25\u001B[0m torch\u001B[38;5;241m.\u001B[39mmanual_seed(\u001B[38;5;241m42\u001B[39m)\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'Dataset_Utils'"
+     ]
     }
    ],
    "source": [
