add link to colab notebook

--- a/Code/demo.ipynb
+++ b/Code/demo.ipynb
@@ -9,7 +9,12 @@
     }
    },
    "source": [
-    "### BraTS Challenge Demo-Notebook"
+    "<div align=\"center\">\n",
+    "    \n",
+    "### BraTS Challenge Demo-Notebook\n",
+    "    \n",
+    "<a href=\"https://colab.research.google.com/github/Space-Dream-42/brainTumourProject/blob/main/Code/demo.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>\n",
+    "</div>"
    ]
   },
   {
