try adding the colab cell again

--- a/Code/demo.ipynb
+++ b/Code/demo.ipynb
@@ -9,12 +9,15 @@
     }
    },
    "source": [
-    "<div align=\"center\">\n",
-    "    \n",
-    "### BraTS Challenge Demo-Notebook\n",
-    "    \n",
-    "<a href=\"https://colab.research.google.com/github/Space-Dream-42/brainTumourProject/blob/main/Code/demo.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>\n",
-    "</div>"
+    "# BraTS Challenge Demo-Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "833c859c",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/Space-Dream-42/brainTumourProject/blob/main/Code/demo.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>"
    ]
   },
   {
